[package]
name = "rust-vector-db"
version = "0.1.0"
edition = "2024"

[dependencies]
# For fast linear algebra / vector math
ndarray = "0.15"
# For parallel processing (searching the graph)
rayon = "1.8"
# For ultra-fast binary serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
# For priority queues (essential for HNSW search)
priority-queue = "1.3"